--- a/cloud-haskell-chat/cloud-haskell-chat.cabal
+++ b/cloud-haskell-chat/cloud-haskell-chat.cabal
@@ -20,7 +20,7 @@ source-repository head
   type:                git
   location:            https://github.com/hughjfchen/explore-cloud-haskell.git
 
-cloud-haskell-chat cloud-haskell-chat-options
+common cloud-haskell-chat-options
   build-depends:       base >= 4.11.1.0 && < 5
                      , relude
                      , text
