--- a/cloud-haskell-chat/cloud-haskell-chat.cabal
+++ b/cloud-haskell-chat/cloud-haskell-chat.cabal
@@ -140,7 +140,7 @@ test-suite cloud-haskell-chat-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Spec
+  other-modules:       Paths_cloud_haskell_chat
   build-depends:       cloud-haskell-chat
                      , hspec
                      , hedgehog
